# BDSC

./: .gitignore  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_realized.md  README.md  _smoke_finance.py  neo4j.md  problem.txt  regression_final01.json  regression_final01_case9.json  regression_final01_finance_dialogue.json  smoke_judges_and_tone.json  summary_final01.txt
apps/backend/: .env.example  README.md  _test_finance_chat.py  probe_case_business_unit_econ.json  probe_case_innovation_moat.json  pyproject.toml  regression_final01.json  regression_final01_case1.json  regression_final01_finance.json  requirements-all.txt  requirements-legacy-doc.txt  requirements.txt  test_ontology_resolver.py  test_project_cognition.py  test_textract.py
apps/backend/app/: __init__.py  config.py  main.py  schemas.py  teacher_file_feedback_api.py
apps/backend/app/services/: ability_subgraphs.py  agent_router.py  agents.py  ai_override_store.py  budget_storage.py  business_plan_service.py  case_knowledge.py  challenge_strategies.py  chat_storage.py  competition_judges.py  diagnosis_engine.py  document_parser.py  evidence_link.py  evidence_text_service.py  finance_analyst.py  llm_client.py  (+29 more)
apps/backend/config/: competition_judges.json  competition_templates.json  track_spectrum.json
apps/backend/eval/: cases.sample.json  run_dialogue_eval.py  run_eval.py
apps/backend/ingest/: README.md  __init__.py  build_metadata.py  common.py  enrich_case_competitions.py  enrich_case_entrepreneurship.py  enrich_case_rubrics_and_rules.py  evidence_refill.py  extract_case_struct.py  pipeline.py
apps/backend/kg/: import_to_neo4j.py  query_category_patterns.py
apps/backend/scripts/: backfill_logical_id.py  inspect_final01_pid.py  probe_chain.py  regression_multiturn.py  smoke_competition_agenda_v2.py  smoke_judges_and_tone.py  summarize_final01.py  test_final01_case1.py  test_final01_case9.py  test_final01_dialogue.py  test_final01_finance_dialogue.py  test_final01_finance_report.py  test_final01_judges_bank.py  test_final01_tone_library.py  test_finance_e2e.py  test_finance_extractor.py
(+613 files in other folders)
